---
config:
  layout: elk
  look: classic
  theme: neutral
---
erDiagram
	direction TB
	CIDADE {
		int id_cidade PK ""  
		string nome  ""  
		string uf  ""  
	}
	LOJA {
		int id_loja PK ""  
		string nome_loja  ""  
		string endereco  ""  
		int id_cidade FK ""  
	}
	CARRO {
		int id_carro PK ""  
		string modelo  ""  
		string placa  ""  
		string status  "Livre/Alugado/Reserva/Manut"  
		int id_loja_atual FK ""  
	}
	LOCACAO {
		int id_locacao PK ""  
		date data_reserva  ""  
		int dias_contratados  "7, 15 ou 30"  
		boolean inclui_motorista  ""  
		string canal_reserva  "Internet/Tel/Loja"  
		string status_pagamento  ""  
		int id_cliente FK ""  
		int id_carro FK ""  
		int id_loja_retirada FK ""  
	}
	CLIENTE {
		int id_cliente PK ""  
		string nome  ""  
		string cpf  ""  
	}
	CIDADE||--|{LOJA:"possui"
	LOJA||--|{CARRO:"estaciona"
	LOJA||--|{LOCACAO:"local_retirada"
	CLIENTE||--|{LOCACAO:"realiza"
	CARRO||--|{LOCACAO:"alocado_para"
